--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-{
-  "name": "gen-ai-next",
+  "name": "kyroai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start:frontend": "next start",
-    "start:backend": "nodemon server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
